--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <img src="./image0.jpeg" alt="Image 3" class="img-fluid">
             <div class="image-description">
               <h3>Me</h3>
-              <p>This when we got accepted.</p>
+              <p>This is when we got accepted.</p>
             </div>
           </div>
         </div>
