--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <a class="nav-link active" href="#about">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#products">Products</a>
+            <a class="nav-link" href="https://eddie710.github.io/Year-1-Portfolio-Projects/">Projects</a>
           </li>
         </ul>
       </div>
@@ -143,8 +143,7 @@
           <h2>About Me</h2>
           <p>My name is Edward Dana, I am currently 17 and now certified in HTML5 Mobile App Development. I have been going to West-Mec for 1 year now, and i am going to be a senior soon at Willow Canyon High School. I joined coding for my love of technology and video games and hope to have a career of game development in the future.</p>
           <div class="about-buttons">
-            <a href="#products" class="btn btn-primary">My Products</a>
-            <a href="#contact" class="btn btn-primary">Contact</a>
+            <a href="https://eddie710.github.io/Year-1-Portfolio-Projects/" class="btn btn-primary">My Products</a>
           </div>
         </div>
         <div class="col-md-6">
